# JSON-visualizer

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
.devcontainer/: devcontainer.json
src/app/: CMakeLists.txt  main.cpp  mainwindow.ui
test/: main_test.cpp
